--- a/HTML&CSS_Practical/flipcart.css
+++ b/HTML&CSS_Practical/flipcart.css
@@ -111,6 +111,9 @@ form.search1 button {
     display: block;
     font-size: 15px;
 }
+.more-info i{
+    color:rgb(8, 82, 253);
+}
 
 i {
     margin-right: 10px;
@@ -127,7 +130,7 @@ i {
 .cart a {
     color: white;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .middel {
@@ -136,10 +139,7 @@ i {
     flex-wrap: wrap;
     column-gap: 15px;
     align-items: center;
-
     box-sizing: border-box;
-    /* margin-top: 10px; */
-
 }
 
 .middel a {
@@ -154,8 +154,9 @@ i {
     width: 60px;
 }
 
-.middel_element {
-
+.middel-element {
+    align-items: center;
+    text-align: center;
     margin-top: 1rem;
     margin: 0px 5px;
 }
@@ -165,7 +166,7 @@ i {
     color: black;
 }
 
-.middel_element i {
+.middel-element i {
     color: black;
 }
 
@@ -173,9 +174,6 @@ i {
     color: rgb(45, 45, 235);
 }
 
-.main-1 {
-    /* position: sticky; */
-}
 
 .main-content {
     width: 98%;
@@ -260,7 +258,6 @@ img:hover {
 }
 
 .child {
-    /* box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18); */
     margin: 0 0.5em;
     background-color: white;
 
@@ -342,14 +339,56 @@ img:hover {
     .main-content-2 {
         overflow-x: auto;
     }
+}
 
-    /* .child {
-            width: 50%;
-            margin-left: 20px;
-            margin-right: 20px;
-        }
-        .child img {
-            height: 200px;
-            width: 100%;
-        } */
+.wrapper{
+    width: 380px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 89%;
+    display: none;
+}
+.toast{
+    width: 100%;
+    height: 100px;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 7px;
+    display:grid;
+    grid-template-columns: 1.3fr 6fr 0.5fr;
+    box-shadow: 0 15px 30px black;
+    opacity: 1;
+}
+
+.success{
+    border-left: 8px solid green;
+}
+
+.container-1,.container-2{
+    align-self: center;
+}
+.success i{
+    color:green;
+}
+
+.container-1 i{
+    font-size: 35px;
+  
+}
+
+.container-2 p:first-child{
+    font-size: 15px;
+    color:rgb(32, 30, 30);
+    font-weight: 700;
+}
+
+
+.toast button{
+    align-self: flex-start;
+    background-color: transparent;
+    font-size: 25px;
+    border: none;
+    line-height: 0;
+    cursor: pointer;
+    color: #263238;
 }
