implemented gradient colour  change on hover

--- a/HTML&CSS Extra Task/css/task1_style.css
+++ b/HTML&CSS Extra Task/css/task1_style.css
@@ -10,3 +10,8 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+.multi-color-gradiant:hover{
+    color: blue;
+    -webkit-text-fill-color:tomato;
+}
